Use shared gRPC endpoint for tsgolint analysis